--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, shrink-to-fit=no"/>
-    <meta name="description" content="State of Startups 2016">
-    <meta name="author" content="First Round Capital">
-    <meta name="keywords" content=" startup, first round, venture capital, first round capital, state of startups">
-    <meta property="og:image" content="http://stateofstartups.firstround.com/2016/img/share_preview.jpeg"/>
+    <meta name="description" content="Cornwall's">
+    <meta name="author" content="Cornwall's">
+    <meta name="keywords" content=" ">
 
 
-    <title>First Round State of Startups 2016</title>
+    <title>Cornwall's</title>
 
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="https://code.jquery.com/color/jquery.color.plus-names-2.1.2.min.js"></script>
@@ -46,6 +45,6 @@
   </head>
 
   <body>
-    
+    <h1>Cornwall's</h1>
   </body>
 </html>
