finished home, menu and team

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <!-- CSS
     ================================================== -->
     <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/skeleton.css">  
     <link rel="stylesheet" href="./css/main.css" >
 
     <!-- favicon links -->
@@ -45,6 +44,81 @@
   </head>
 
   <body>
-    <h1>Cornwall's</h1>
+    <div class="navigation">
+      <ul class="navgiation-links">
+        <li class="navigation-link">
+          <a href="home">Home</a>
+        </li>
+        <li class="navigation-link">
+          <a href="menu">Menu</a>
+        </li>
+        <li class="navigation-link">
+          <a href="our-team">Our Team</a>
+        </li>
+        <li class="navigation-link logo-link">
+          <img src="./img/logo/cornwalls.svg" alt="Cornwall's Logo"/>
+        </li>
+        <li class="navigation-link">
+          <a href="hours">Hours</a>
+        </li>
+        <li class="navigation-link">
+          <a href="events">Events</a>
+        </li>
+        <li class="navigation-link">
+          <a href="contact">Contact</a>
+        </li>
+      </ul>
+    </div>
+    <div class="landing">
+      <h1>Cornwall's</h1>
+      <div class="landing-content">
+        <img class="landing-image" src="./img/landing/landing.jpg" alt="Landing Image of Team"/>
+        <div class="landing-hours">
+          <h4>is <span class="green-text">OPEN</span> today from 4pm-2am</h4>
+          <h4>Kitchen <span class="red-text">closes</span> at midnight</h4>
+        </div>
+      </div>
+    </div>
+    <div class="yellow-border-section">
+      <div class="menus-section white-background">
+        <h3>Menus</h3>
+        <div class="menu-links">
+          <a class="menu-link yellow-text" href="#" target="_blank">Lunch</a>
+          <a class="menu-link green-text" href="#" target="_blank">Dinner</a>
+          <a class="menu-link red-text" href="#" target="_blank">Beer, Wine, Spirits</a>
+        </div>
+        <div class="menu-photos">
+          <img src="./img/menus/one.jpg" alt="picture of a hamburger"/><img src="./img/menus/two.jpg" alt="picture of a beer"/><img src="./img/menus/three.jpg" alt="picture of a appetizers"/>
+        </div>
+      </div>
+      <div class="team-section white-background">
+        <div class="team-photo"> 
+          <img src="./img/team/team.jpg" alt="Photograph of the Cornwall's team"/>
+        </div>
+        <div class="team-background">
+          <p>(Billy Need Content) Bacon ipsum dolor amet filet mignon hamburger strip steak fugiat kielbasa in minim. Aliqua venison laborum, ad kielbasa jowl brisket prosciutto. Non beef ribs velit dolore. Labore kevin dolore pariatur ut, deserunt et dolore sint shankle. Cupim pork loin landjaeger capicola kielbasa prosciutto sint irure quis leberkas sunt sirloin.</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
