working through cornwalls site

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </div>
     </div>
     <div class="yellow-border-section">
-      <div class="menus-section white-background">
+      <div class="menus-section white-background main-section">
         <h3>Menus</h3>
         <div class="menu-links">
           <a class="menu-link yellow-text" href="#" target="_blank">Lunch</a>
@@ -91,13 +91,42 @@
           <img src="./img/menus/one.jpg" alt="picture of a hamburger"/><img src="./img/menus/two.jpg" alt="picture of a beer"/><img src="./img/menus/three.jpg" alt="picture of a appetizers"/>
         </div>
       </div>
-      <div class="team-section white-background">
+      <div class="team-section white-background main-section">
         <div class="team-photo"> 
           <img src="./img/team/team.jpg" alt="Photograph of the Cornwall's team"/>
         </div>
         <div class="team-background">
           <p>(Billy Need Content) Bacon ipsum dolor amet filet mignon hamburger strip steak fugiat kielbasa in minim. Aliqua venison laborum, ad kielbasa jowl brisket prosciutto. Non beef ribs velit dolore. Labore kevin dolore pariatur ut, deserunt et dolore sint shankle. Cupim pork loin landjaeger capicola kielbasa prosciutto sint irure quis leberkas sunt sirloin.</p>
         </div>
+      </div>
+      <div class="hours-section white-background main-section">
+        <h3>Hours</h3>
+        <div class="regular-hours-section">
+          <h4><span class="green-text">OPEN</span> today from 4pm-2am</h4>
+          <h4>Kitchen <span class="red-text">closes</span> at midnight</h4>
+        </div>
+        <div class="regular-hours-section">
+          <h4 class="red-text">Closed on Mondays</h4>
+        </div>
+        <div class="regular-hours-section">
+          <h4>Tuesday to Friday</h4>
+          <h4>12pm-2am</h4>
+          <h4>Kitchen <span class="red-text">closes</span> at midnight</h4>
+        </div>
+        <div class="regular-hours-section">
+          <h4>Saturday & Sunday</h4>
+          <h4>10am-2am</h4>
+          <h4>Kitchen <span class="red-text">closes</span> at midnight</h4>
+        </div>
+      </div>
+      <div class="events-section white-background main-section">
+        <h4>Cornwall’s has three pool tables, darts, two rooms, an outdoor seating area, and space to accomadate 160 people. To host your next event at Cornwall’s, <span class="green-text" id="event-form-button">please fill out this form</span></h4>
+        <div class="events-photos">
+          <img src="./img/events/one.jpg" alt="picture of a billiards"/>
+          <img src="./img/events/two.jpg" alt="picture of a bartender pouring drink"/>
+          <img src="./img/events/three.jpg" alt="picture of people talking"/>
+        </div>
+        <h5 class="green-text" id="more-photos">More Photos</h5>
       </div>
     </div>
   </body>
