finshed with skeleton

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </div>
       </div>
       <div class="events-section white-background main-section">
-        <h4>Cornwall’s has three pool tables, darts, two rooms, an outdoor seating area, and space to accomadate 160 people. To host your next event at Cornwall’s, <span class="green-text" id="event-form-button">please fill out this form</span></h4>
+        <h4>Cornwall’s has three pool tables, darts, two rooms, an outdoor seating area, and space to accomadate 160 people. To host your next event at Cornwall’s, <span class="green-text event-form-button">please fill out this form</span></h4>
         <div class="events-photos">
           <img src="./img/events/one.jpg" alt="picture of a billiards"/>
           <img src="./img/events/two.jpg" alt="picture of a bartender pouring drink"/>
@@ -128,6 +128,20 @@
         </div>
         <h5 class="green-text" id="more-photos">More Photos</h5>
       </div>
+      <div class="contact-section white-background main-section">
+        <h5 class="green-text">To host an event at Cornwall's <span class="event-form-button">click here</span></h5>
+        <div class="address">
+          <h6>Cornwall’s is located at</h6>
+          <h6 class="green-text">654 Beacon Street</h6>
+          <h6 class="green-text">Boston, MA 02215</h6>
+          <a>(617) 262-3749</a>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <p>&#169 Cornwall's</p>
+      <p class="footer-link">Privacy Policy</p>
+      <p class="footer-link">Terms of Service</p>
     </div>
   </body>
 </html>
