--- a/index.html
+++ b/index.html
@@ -123,11 +123,17 @@
         </div>
       </div>
       <div class="events-section white-background main-section" id="events" href="#events">
-        <h4>Cornwall’s has three pool tables, darts, two rooms, an outdoor seating area, and space to accomadate 160 people. To host your next event at Cornwall’s, <span class="green-text event-form-button">please fill out this form</span></h4>
+        <h4>Cornwall’s has three pool tables, darts, two rooms, an outdoor seating area, and space to accomadate 160 people. To host your next event at Cornwall’s, <span class="event-form-button green-link">please fill out this form</span></h4>
         <div class="events-photos">
-          <img src="./img/events/one.jpg" alt="picture of a billiards"/>
-          <img src="./img/events/two.jpg" alt="picture of a bartender pouring drink"/>
-          <img src="./img/events/three.jpg" alt="picture of people talking"/>
+          <div id="event-photo-one" class="event-photo">
+            <img src="./img/events/one.jpg" alt="picture of a billiards"/>
+          </div>
+          <div id="event-photo-two" class="event-photo">
+            <img src="./img/events/two.jpg" alt="picture of a bartender pouring drink"/>
+          </div>
+          <div id="event-photo-three" class="event-photo">
+            <img src="./img/events/three.jpg" alt="picture of people talking"/>
+          </div>
         </div>
         <h5 class="green-text green-link" id="more-photos">More Photos</h5>
       </div>
@@ -147,6 +153,59 @@
         </div>
       </div>
     </div>
+    <div class="contact-form" id="event-contact-form">
+      <form id="contactForm" action="POST" method="send">
+        <div id="contact-form-inputs">
+          <div class="form-side">
+            <div class="form-group">
+              <div class="errorMessage"></div>
+              <label for="contactName">Full Name</label>
+              <input type="text"  name="data[Name]" id="contactName" placeholder="">
+            </div>
+            <div class="form-group">
+              <div class="errorMessage"></div>
+              <label for="contactEmail">Company</label>
+              <input type="text" name="data[Company]"  id="contactCompany" placeholder="">
+            </div>
+            <div class="form-group">
+              <div class="errorMessage"></div>
+              <label for="contactDate">Event Date</label>
+              <textarea type="date" name="data[Date]" id="contactMessage" placeholder=""></textarea>
+            </div>
+          </div>
+          <div class="form-side">
+            <div class="form-group">
+              <div class="errorMessage"></div>
+              <label for="contactName">Full Name</label>
+              <input type="text"  name="data[Name]" id="contactName" placeholder="">
+            </div>
+            <div class="form-group">
+              <div class="errorMessage"></div>
+              <label for="contactEmail">How can we reach you?</label>
+              <input type="email" name="from"  id="contactEmail" placeholder="">
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="errorMessage"></div>
+            <label for="contactMessage">Description (Rooms Requested, Food and Drink needs, etc)</label>
+            <textarea type="textarea" name="data[Message]" id="contactMessage" placeholder=""></textarea>
+          </div>
+        </div>
+        <input type="hidden" name="utf8" value="✓">
+        <input type="hidden" name="to" value="ben@julycamp.com" />
+        <input type="hidden" name="noreply" value="no-reply@cornwalls.com" />
+        <input type="hidden" name="company" value="Cornwall's" />
+        <button type="submit" id="contact-button">Send It!</button>
+      </form>
+      <div id="thank-you">
+        <div id="confirmation-holder">
+        <p class="confirmation">
+          Thank you! Someone will be in touch within the next 2-3 business days.
+        </p>
+        </div>
+      </div>
+    </div>
+
     <div class="footer">
       <p>&#169 Cornwall's</p>
       <p class="footer-link">Privacy Policy</p>
@@ -157,9 +216,11 @@
 
     <!-- Javascript
     ================================================== -->
+    <script src="./js/libraries/formValidation/formValidation.min.js" type="text/javascript"></script>
+    <script src="./js/libraries/formValidation/bootstrap.min.js" type="text/javascript"></script>
     <script src="./js/map.js" type="text/javascript"></script>
-    <script src="./js/anchor-click.js" type="text/javascript"></script>
     <script src="./js/anchor-scroll.js" type="text/javascript"></script>
+    <script src="./js/form.js" type="text/javascript"></script>
 
     <!-- /Javascript
     ================================================== -->
