--- a/index.html
+++ b/index.html
@@ -152,60 +152,79 @@
           <div id="goog-map"></div>
         </div>
       </div>
-    </div>
-    <div class="contact-form" id="event-contact-form">
-      <form id="contactForm" action="POST" method="send">
-        <div id="contact-form-inputs">
-          <div class="form-side">
-            <div class="form-group">
-              <div class="errorMessage"></div>
-              <label for="contactName">Full Name</label>
-              <input type="text"  name="data[Name]" id="contactName" placeholder="">
-            </div>
-            <div class="form-group">
-              <div class="errorMessage"></div>
-              <label for="contactEmail">Company</label>
-              <input type="text" name="data[Company]"  id="contactCompany" placeholder="">
-            </div>
-            <div class="form-group">
-              <div class="errorMessage"></div>
-              <label for="contactDate">Event Date</label>
-              <textarea type="date" name="data[Date]" id="contactMessage" placeholder=""></textarea>
-            </div>
-          </div>
-          <div class="form-side">
-            <div class="form-group">
-              <div class="errorMessage"></div>
-              <label for="contactName">Full Name</label>
-              <input type="text"  name="data[Name]" id="contactName" placeholder="">
-            </div>
-            <div class="form-group">
-              <div class="errorMessage"></div>
-              <label for="contactEmail">How can we reach you?</label>
-              <input type="email" name="from"  id="contactEmail" placeholder="">
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="errorMessage"></div>
-            <label for="contactMessage">Description (Rooms Requested, Food and Drink needs, etc)</label>
-            <textarea type="textarea" name="data[Message]" id="contactMessage" placeholder=""></textarea>
-          </div>
+      <div class="contact-form main-section white-background" id="event-contact-form">
+        <div class="form-header">
+          <h3>Event Request Form</h3>
         </div>
-        <input type="hidden" name="utf8" value="✓">
-        <input type="hidden" name="to" value="ben@julycamp.com" />
-        <input type="hidden" name="noreply" value="no-reply@cornwalls.com" />
-        <input type="hidden" name="company" value="Cornwall's" />
-        <button type="submit" id="contact-button">Send It!</button>
-      </form>
-      <div id="thank-you">
-        <div id="confirmation-holder">
-        <p class="confirmation">
-          Thank you! Someone will be in touch within the next 2-3 business days.
-        </p>
+        <form id="contactForm" action="POST" method="send">
+          <div id="contact-form-inputs">
+            <div class="form-side">
+              <div class="form-group">
+                <div class="errorMessage"></div>
+                <label for="contactName">Full Name*</label>
+                <input type="text"  name="data[Name]" id="contactName" placeholder="">
+              </div>
+              <div class="form-group">
+                <label for="contactCompany">Company</label>
+                <input type="text" name="data[Company]"  id="contactCompany" placeholder="">
+              </div>
+              <div class="form-line">
+                <div class="form-group">
+                  <label for="contactDate">Event Date</label>
+                  <textarea type="date" name="data[Date]" id="contactDate" placeholder=""></textarea>
+                </div>
+                <div class="form-group form-time">
+                  <label for="contactStartTime">Start</label>
+                  <textarea type="time" name="data[StartTime]" id="contactStartTime" placeholder=""></textarea>
+                </div>
+                <div class="form-group form-time">
+                  <label for="contactEndTime">End</label>
+                  <textarea type="time" name="data[EndTime]" id="contactEndTime" placeholder=""></textarea>
+                </div>
+              </div>
+            </div>
+            <div class="form-side">
+              <div class="form-group">
+                <div class="errorMessage"></div>
+                <label for="contactPhone">Phone Number*</label>
+                <input type="text"  name="data[Phone]" id="contactPhone" placeholder="">
+              </div>
+              <div class="form-group">
+                <div class="errorMessage"></div>
+                <label for="contactEmail">Email*</label>
+                <input type="email" name="from"  id="contactEmail" placeholder="">
+              </div>
+              <div class="form-line">
+                <div class="form-group">
+                  <label for="contactpartySize"># of People</label>
+                  <input type="integer" name="data[partySize]"  id="contactpartySize" placeholder="">
+                </div>
+                <div class="form-group">
+                  <label for="contactEventType">Event Type</label>
+                  <input type="text" name="data[EventType]"  id="contactEventType" placeholder="">
+                </div>
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="contactMessage">Description (Rooms Requested, Food and Drink needs, etc)</label>
+              <textarea type="textarea" name="data[Message]" id="contactMessage" placeholder=""></textarea>
+            </div>
+          </div>
+          <input type="hidden" name="utf8" value="✓">
+          <input type="hidden" name="to" value="ben@julycamp.com" />
+          <input type="hidden" name="noreply" value="no-reply@cornwalls.com" />
+          <input type="hidden" name="company" value="Cornwall's" />
+          <button type="submit" id="contact-button">Send It!</button>
+        </form>
+        <div id="thank-you">
+          <div id="confirmation-holder">
+          <p class="confirmation">
+            Thank you! Someone will be in touch within the next 2-3 business days.
+          </p>
+          </div>
         </div>
       </div>
     </div>
-
     <div class="footer">
       <p>&#169 Cornwall's</p>
       <p class="footer-link">Privacy Policy</p>
