--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </head>
 
   <body>
-    <div class="navigation">
+    <div id="navigation">
       <ul class="navgiation-links">
         <li class="navigation-link">
           <a class="anchor-link" href="#home">Home</a>
@@ -240,6 +240,7 @@
     <script src="./js/map.js" type="text/javascript"></script>
     <script src="./js/anchor-scroll.js" type="text/javascript"></script>
     <script src="./js/form.js" type="text/javascript"></script>
+    <script src="./js/active-link.js" type="text/javascript"></script>
 
     <!-- /Javascript
     ================================================== -->
