--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
     <title>Cornwall's</title>
 
-    <script src="https://code.jquery.com/jquery-1.11.3.min.js" type="text/javascript" ></script>
-    <script src="https://code.jquery.com/color/jquery.color.plus-names-2.1.2.min.js" type="text/javascript" ></script>
-    <script src="http://maps.googleapis.com/maps/api/js" type="text/javascript" ></script>
     <!-- CSS
     ================================================== -->
     <link rel="stylesheet" href="./css/normalize.css">
+    
+    <link rel="stylesheet" href="./libraries/slick/slick.css">
+    <link rel="stylesheet" href="./libraries/slick/slick-theme.css">
     <link rel="stylesheet" href="./css/main.css" >
 
     <!-- favicon links -->
@@ -124,19 +124,38 @@
       </div>
       <div class="events-section white-background main-section" id="events" href="#events">
         <h4>Cornwall’s has three pool tables, darts, two rooms, an outdoor seating area, and space to accomadate 160 people. To host your next event at Cornwall’s, <span class="event-form-button green-link">please fill out this form</span></h4>
-        <div class="events-photos">
-          <div id="event-photo-one" class="event-photo">
+
+        <div class="event-image-slider">
+          <div>
             <img src="./img/events/one.jpg" alt="picture of a billiards"/>
           </div>
-          <div id="event-photo-two" class="event-photo">
+          <div>
             <img src="./img/events/two.jpg" alt="picture of a bartender pouring drink"/>
           </div>
-          <div id="event-photo-three" class="event-photo">
+          <div>
             <img src="./img/events/three.jpg" alt="picture of people talking"/>
           </div>
+          <div>
+            <img src="./img/events/four.jpg" alt="picture of people talking"/>
+          </div>
+          <div>
+            <img src="./img/events/five.jpg" alt="picture of people talking"/>
+          </div>
+          <div>
+            <img src="./img/events/six.jpg" alt="picture of people talking"/>
+          </div>
+          <div>
+            <img src="./img/events/seven.jpg" alt="picture of people talking"/>
+          </div>
+          <div>
+            <img src="./img/events/eight.jpg" alt="picture of people talking"/>
+          </div>
+          <div>
+            <img src="./img/events/nine.jpg" alt="picture of people talking"/>
+          </div>
         </div>
-        <h5 class="green-text green-link" id="more-photos">More Photos</h5>
       </div>
+    
       <div class="contact-section white-background main-section" id="contact" href="#contact">
         <h5 class="green-text">To host an event at Cornwall's <span class="event-form-button green-link">click here</span></h5>
         <h6>Cornwall’s is located at</h6>
@@ -235,12 +254,19 @@
 
     <!-- Javascript
     ================================================== -->
-    <script src="./js/libraries/formValidation/formValidation.min.js" type="text/javascript"></script>
-    <script src="./js/libraries/formValidation/bootstrap.min.js" type="text/javascript"></script>
-    <script src="./js/map.js" type="text/javascript"></script>
-    <script src="./js/anchor-scroll.js" type="text/javascript"></script>
-    <script src="./js/form.js" type="text/javascript"></script>
-    <script src="./js/active-link.js" type="text/javascript"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/color/jquery.color.plus-names-2.1.2.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js"></script>
+    <script type="text/javascript" src="./libraries/formValidation/formValidation.min.js"></script>
+    <script type="text/javascript" src="./libraries/formValidation/bootstrap.min.js"></script>
+    <script type="text/javascript" src="./libraries/slick/slick.min.js"></script>
+
+    <script type="text/javascript" src="./js/map.js"></script>
+    <script type="text/javascript" src="./js/gallery.js"></script>
+    <script type="text/javascript" src="./js/anchor-scroll.js"></script>
+    <script type="text/javascript" src="./js/form.js"></script>
+    <script type="text/javascript" src="./js/active-link.js"></script>
 
     <!-- /Javascript
     ================================================== -->
