fixed active link

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </li>
       </ul>
     </div>
-    <div class="landing" id="home" href="#home">
+    <div class="landing" id="home">
       <h1>Cornwall's</h1>
       <div class="landing-content">
         <img class="landing-image" src="./img/landing/landing.jpg" alt="Landing Image of Team"/>
@@ -81,7 +81,7 @@
       </div>
     </div>
     <div class="yellow-border-section">
-      <div class="menus-section white-background main-section" id="menus" href="#menus">
+      <div class="menus-section white-background main-section" id="menus">
         <h3>Menus</h3>
         <div class="menu-links">
           <a class="menu-link yellow-text" href="#" target="_blank">Lunch</a>
@@ -102,7 +102,7 @@
           <p>(Billy Need Content) Bacon ipsum dolor amet filet mignon hamburger strip steak fugiat kielbasa in minim. Aliqua venison laborum, ad kielbasa jowl brisket prosciutto. Non beef ribs velit dolore. Labore kevin dolore pariatur ut, deserunt et dolore sint shankle. Cupim pork loin landjaeger capicola kielbasa prosciutto sint irure quis leberkas sunt sirloin.</p>
         </div>
       </div>
-      <div class="hours-section white-background main-section" id="hours" href="#hours">
+      <div class="hours-section white-background main-section" id="hours">
         <h3>Hours</h3>
         <div class="regular-hours-section">
           <h4><span class="green-text">OPEN</span> today from 4pm-2am</h4>
@@ -122,7 +122,7 @@
           <h4>Kitchen <span class="red-text">closes</span> at midnight</h4>
         </div>
       </div>
-      <div class="events-section white-background main-section" id="events" href="#events">
+      <div class="events-section white-background main-section" id="events">
         <h4>Cornwall’s has three pool tables, darts, two rooms, an outdoor seating area, and space to accomadate 160 people. To host your next event at Cornwall’s, <span class="event-form-button green-link">please fill out this form</span></h4>
 
         <div class="event-image-slider">
@@ -156,7 +156,7 @@
         </div>
       </div>
     
-      <div class="contact-section white-background main-section" id="contact" href="#contact">
+      <div class="contact-section white-background main-section" id="contact">
         <h5 class="green-text">To host an event at Cornwall's <span class="event-form-button green-link">click here</span></h5>
         <h6>Cornwall’s is located at</h6>
         <div class="address">          
@@ -265,8 +265,9 @@
     <script type="text/javascript" src="./js/map.js"></script>
     <script type="text/javascript" src="./js/gallery.js"></script>
     <script type="text/javascript" src="./js/anchor-scroll.js"></script>
-    <script type="text/javascript" src="./js/form.js"></script>
     <script type="text/javascript" src="./js/active-link.js"></script>
+    <script type="text/javascript" src="./js/form.js"></script>
+    
 
     <!-- /Javascript
     ================================================== -->
