--- a/index.html
+++ b/index.html
@@ -181,24 +181,24 @@
               <div class="form-group">
                 <div class="errorMessage"></div>
                 <label for="contactName">Full Name*</label>
-                <input type="text"  name="data[Name]" id="contactName" placeholder="">
+                <input type="text"  name="data[Name]" id="contactName" placeholder="" required/>
               </div>
               <div class="form-group">
                 <label for="contactCompany">Company</label>
-                <input type="text" name="data[Company]"  id="contactCompany" placeholder="">
+                <input type="text" name="data[Company]"  id="contactCompany" placeholder=""/>
               </div>
-              <div class="form-line">
-                <div class="form-group">
+              <div class="event-date-time">
+                <div class="form-group form-date">
                   <label for="contactDate">Event Date</label>
-                  <textarea type="date" name="data[Date]" id="contactDate" placeholder=""></textarea>
+                  <input type="date" name="data[Date]" id="contactDate" placeholder=""/>
                 </div>
                 <div class="form-group form-time">
                   <label for="contactStartTime">Start</label>
-                  <textarea type="time" name="data[StartTime]" id="contactStartTime" placeholder=""></textarea>
+                  <input type="time" name="data[StartTime]" id="contactStartTime" placeholder=""/>
                 </div>
                 <div class="form-group form-time">
                   <label for="contactEndTime">End</label>
-                  <textarea type="time" name="data[EndTime]" id="contactEndTime" placeholder=""></textarea>
+                  <input type="time" name="data[EndTime]" id="contactEndTime" placeholder=""/>
                 </div>
               </div>
             </div>
@@ -206,14 +206,14 @@
               <div class="form-group">
                 <div class="errorMessage"></div>
                 <label for="contactPhone">Phone Number*</label>
-                <input type="text"  name="data[Phone]" id="contactPhone" placeholder="">
+                <input type="text"  name="data[Phone]" id="contactPhone" placeholder="" required>
               </div>
               <div class="form-group">
                 <div class="errorMessage"></div>
                 <label for="contactEmail">Email*</label>
-                <input type="email" name="from"  id="contactEmail" placeholder="">
+                <input type="email" name="from"  id="contactEmail" placeholder="" required>
               </div>
-              <div class="form-line">
+              <div class="form-line event-type">
                 <div class="form-group">
                   <label for="contactpartySize"># of People</label>
                   <input type="integer" name="data[partySize]"  id="contactpartySize" placeholder="">
@@ -224,7 +224,7 @@
                 </div>
               </div>
             </div>
-            <div class="form-group">
+            <div class="form-group form-message">
               <label for="contactMessage">Description (Rooms Requested, Food and Drink needs, etc)</label>
               <textarea type="textarea" name="data[Message]" id="contactMessage" placeholder=""></textarea>
             </div>
@@ -233,15 +233,11 @@
           <input type="hidden" name="to" value="ben@julycamp.com" />
           <input type="hidden" name="noreply" value="no-reply@cornwalls.com" />
           <input type="hidden" name="company" value="Cornwall's" />
-          <button type="submit" id="contact-button">Send It!</button>
-        </form>
-        <div id="thank-you">
-          <div id="confirmation-holder">
-          <p class="confirmation">
+          <button type="submit" id="contact-button">Submit</button>
+          <p id="confirmation">
             Thank you! Someone will be in touch within the next 2-3 business days.
           </p>
-          </div>
-        </div>
+        </form>
       </div>
     </div>
     <div class="footer">
