test logo fonts

--- a/index.html
+++ b/index.html
@@ -71,7 +71,12 @@
       </ul>
     </div>
     <div class="landing" id="home">
-      <h1>Cornwall's</h1>
+      <img src="./img/logo/cornwalls-letters.png" class="test-image" alt="Cornwall's Logo"/>
+      <h1 class="test-poly">Cornwall's  (1)</h1>
+      <h1 class="test-lateef">Cornwall's  (2)</h1>
+      <h1 class="test-amiri">Cornwall's  (3)</h1>
+      <h1 class="test-source-serif">Cornwall's  (4)</h1>
+      <h1 class="test-scheherazade">Cornwall's  (5)</h1>
       <div class="landing-content">
         <img class="landing-image" src="./img/landing/landing.jpg" alt="Landing Image of Team"/>
         <div class="landing-hours">
