updated logos and content

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, shrink-to-fit=no"/>
-    <meta name="description" content="Cornwall's">
+    <meta name="description" content="Cornwall's is a drinking and dining establishment that is, first and foremost, a British-style pub, where people congregate to drink their pints of beer and ale, talk, play games and eat.">
     <meta name="author" content="Cornwall's">
-    <meta name="keywords" content=" ">
+    <meta name="keywords" content="cornwalls, cornwalls pub, pub, beer, kenmore, fenway, games, England, traditional, pool, billiards, British, British-style pub, drinking, dining, pint, ale">
 
 
     <title>Cornwall's</title>
@@ -71,12 +71,7 @@
       </ul>
     </div>
     <div class="landing" id="home">
-      <img src="./img/logo/cornwalls-letters.png" class="test-image" alt="Cornwall's Logo"/>
-      <h1 class="test-poly">Cornwall's  (1)</h1>
-      <h1 class="test-lateef">Cornwall's  (2)</h1>
-      <h1 class="test-amiri">Cornwall's  (3)</h1>
-      <h1 class="test-source-serif">Cornwall's  (4)</h1>
-      <h1 class="test-scheherazade">Cornwall's  (5)</h1>
+      <h1>Cornwall's</h1>
       <div class="landing-content">
         <img class="landing-image" src="./img/landing/landing.jpg" alt="Landing Image of Team"/>
         <div class="landing-hours">
@@ -86,6 +81,11 @@
       </div>
     </div>
     <div class="yellow-border-section">
+      <div class="mission-section white-background main-section">
+        <div class="mission-statement">
+          <p>Cornwall's is a drinking and dining establishment that is, first and foremost, a British-style pub, where people congregate to drink their pints of beer and ale, talk, play games and eat. Cornwall's caters to those who want a good meal and a good drink at regular prices. The food and drink are traditional in a good, solid way. Cornwall's was started on the premise that drinking makes you hungry and eating makes you thirsty, and both sets of circumstances, while accompanied by good conversation and a relaxed atmosphere, combine to create a resilient institution - which contributes to community life.</p>
+        </div>
+      </div>
       <div class="menus-section white-background main-section" id="menus">
         <h3>Menus</h3>
         <div class="menu-links">
@@ -104,7 +104,7 @@
           <img src="./img/team/team.jpg" alt="Photograph of the Cornwall's team"/>
         </div>
         <div class="team-background">
-          <p>(Billy Need Content) Bacon ipsum dolor amet filet mignon hamburger strip steak fugiat kielbasa in minim. Aliqua venison laborum, ad kielbasa jowl brisket prosciutto. Non beef ribs velit dolore. Labore kevin dolore pariatur ut, deserunt et dolore sint shankle. Cupim pork loin landjaeger capicola kielbasa prosciutto sint irure quis leberkas sunt sirloin.</p>
+          <p>Cornwall's has always been family owned and operated. It all began with John in 1973 and then John and Pam when they were married in 1978. Now John and Pam have ben joined by their nephews JR, Billy and neice Elizabeth.</p>
         </div>
       </div>
       <div class="hours-section white-background main-section" id="hours">
