made image slider universal

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       <div class="events-section white-background main-section" id="events">
         <h4>Cornwall’s has three pool tables, darts, two rooms, an outdoor seating area, and space to accomadate 160 people. To host your next event at Cornwall’s, <span class="event-form-button green-link">please fill out this form</span></h4>
 
-        <div class="event-image-slider">
+        <div class="cornwalls-image-slider">
           <div>
             <img src="./img/events/one.jpg" alt="picture of a billiards"/>
           </div>
@@ -268,6 +268,7 @@
     <script type="text/javascript" src="./js/anchor-scroll.js"></script>
     <script type="text/javascript" src="./js/active-link.js"></script>
     <script type="text/javascript" src="./js/form.js"></script>
+    <script type="text/javascript" src="./js/main.js"></script>
     
 
     <!-- /Javascript
