--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
       <div class="landing-content">
         <img class="landing-image" src="./img/landing/landing.jpg" alt="Landing Image of Team"/>
         <div class="landing-hours">
-          <h4>is <span class="green-text">OPEN</span> today from 4pm-2am</h4>
-          <h4>Kitchen <span class="red-text">closes</span> at midnight</h4>
+          <h4>is <span class="green-text">OPEN</span> today from <span class="daily-time"></span></h4>
+          <h4>Kitchen <span class="red-text">closes</span> at <span class="kitchen-daily-time">midnight</h4>
         </div>
       </div>
     </div>
@@ -110,8 +110,8 @@
       <div class="hours-section white-background main-section" id="hours">
         <h3>Hours</h3>
         <div class="regular-hours-section">
-          <h4><span class="green-text">OPEN</span> today from 4pm-2am</h4>
-          <h4>Kitchen <span class="red-text">closes</span> at midnight</h4>
+          <h4><span class="green-text">OPEN</span> today from <span class="daily-time"></span></h4>
+          <h4>Kitchen <span class="red-text">closes</span> at <span class="kitchen-daily-time">midnight</h4>
         </div>
         <div class="regular-hours-section">
           <h4 class="red-text">Closed on Mondays</h4>
