updated photos and menus

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
       <div class="landing-content">
         <img class="landing-image" src="./img/landing/landing.jpg" alt="Landing Image of Team"/>
         <div class="landing-hours">
-          <h4>is <span class="green-text">OPEN</span> today from <span class="daily-time"></span></h4>
-          <h4>Kitchen <span class="red-text">closes</span> at <span class="kitchen-daily-time">midnight</h4>
+          <h4>is <span class="green-text">OPEN</span> today <span class="daily-time"></span></h4>
+          <h4>Kitchen <span class="red-text">closes</span> at <span class="kitchen-daily-time"></span></h4>
         </div>
       </div>
     </div>
@@ -89,14 +89,49 @@
       <div class="menus-section white-background main-section" id="menus">
         <h3>Menus</h3>
         <div class="menu-links">
-          <a class="menu-link yellow-text" href="#" target="_blank">Lunch</a>
+          <a class="menu-link yellow-text" href="https://s3.amazonaws.com/cornwalls/menus/lunch.pdf" target="_blank">Lunch</a>
           </br>
-          <a class="menu-link green-text" href="#" target="_blank">Dinner</a>
-          </br>
-          <a class="menu-link red-text" href="#" target="_blank">Beer, Wine, Spirits</a>
+          <a class="menu-link green-text" href="https://s3.amazonaws.com/cornwalls/menus/dinner.pdf" target="_blank">Dinner</a>
+          <!-- </br> -->
+          <!-- <a class="menu-link red-text" href="#" target="_blank">Beer, Wine, Spirits</a> -->
         </div>
-        <div class="menu-photos">
-          <img src="./img/menus/one.jpg" alt="picture of a hamburger"/><img src="./img/menus/two.jpg" alt="picture of a beer"/><img src="./img/menus/three.jpg" alt="picture of a appetizers"/>
+        <div class="cornwalls-image-slider">
+          <div>
+            <img src="https://s3.amazonaws.com/cornwalls/menu-photos/menu_1.jpg" alt="picture of food"/>
+          </div>
+          <div>
+            <img src="https://s3.amazonaws.com/cornwalls/menu-photos/menu_2.jpg" alt="picture of food"/>
+          </div>
+          <div>
+            <img src="https://s3.amazonaws.com/cornwalls/menu-photos/menu_3.jpg" alt="picture of food"/>
+          </div>
+          <div>
+            <img src="https://s3.amazonaws.com/cornwalls/menu-photos/menu_4.jpg" alt="picture of food"/>
+          </div>
+          <div>
+            <img src="https://s3.amazonaws.com/cornwalls/menu-photos/menu_5.jpg" alt="picture of food"/>
+          </div>
+          <div>
+            <img src="https://s3.amazonaws.com/cornwalls/menu-photos/menu_6.jpg" alt="picture of food"/>
+          </div>
+          <div>
+            <img src="https://s3.amazonaws.com/cornwalls/menu-photos/menu_7.jpg" alt="picture of food"/>
+          </div>
+          <div>
+            <img src="https://s3.amazonaws.com/cornwalls/menu-photos/menu_8.jpg" alt="picture of food"/>
+          </div>
+          <div>
+            <img src="https://s3.amazonaws.com/cornwalls/menu-photos/menu_9.jpg" alt="picture of food"/>
+          </div>
+          <div>
+            <img src="https://s3.amazonaws.com/cornwalls/menu-photos/menu_10.jpg" alt="picture of food"/>
+          </div>
+          <div>
+            <img src="https://s3.amazonaws.com/cornwalls/menu-photos/menu_11.jpg" alt="picture of food"/>
+          </div>
+          <div>
+            <img src="https://s3.amazonaws.com/cornwalls/menu-photos/menu_12.jpg" alt="picture of food"/>
+          </div>
         </div>
       </div>
       <div class="team-section white-background main-section" id="our-team" href="#our-team">
@@ -111,20 +146,21 @@
         <h3>Hours</h3>
         <div class="regular-hours-section">
           <h4><span class="green-text">OPEN</span> today from <span class="daily-time"></span></h4>
-          <h4>Kitchen <span class="red-text">closes</span> at <span class="kitchen-daily-time">midnight</h4>
+          <h5>Kitchen <span class="red-text">closes</span> at <span class="kitchen-daily-time"></h5>
         </div>
         <div class="regular-hours-section">
-          <h4 class="red-text">Closed on Mondays</h4>
+          <h4>Monday to Friday</h4>
+          <h4><span class="green-text">Open</span> from 12PM-2AM</h4>
+          <h5>Kitchen <span class="green-text">open</span> from 12PM-3PM & 5PM-11PM</h5>
         </div>
         <div class="regular-hours-section">
-          <h4>Tuesday to Friday</h4>
-          <h4>12pm-2am</h4>
-          <h4>Kitchen <span class="red-text">closes</span> at midnight</h4>
+          <h4>Saturday</h4>
+          <h4><span class="green-text">Open</span> from 4PM-2AM</h4>
+          <h5>Kitchen <span class="green-text">open</span> from 4PM-11PM</h5>
         </div>
         <div class="regular-hours-section">
-          <h4>Saturday & Sunday</h4>
-          <h4>10am-2am</h4>
-          <h4>Kitchen <span class="red-text">closes</span> at midnight</h4>
+          <h4>Sunday</h4>
+          <h4>Only open during Red Sox home games and Fenway concerts.</h4>
         </div>
       </div>
       <div class="events-section white-background main-section" id="events">
@@ -132,31 +168,31 @@
 
         <div class="cornwalls-image-slider">
           <div>
-            <img src="./img/events/one.jpg" alt="picture of a billiards"/>
+            <img src="https://s3.amazonaws.com/cornwalls/event-photos/event_1.jpg" alt="picture of event space"/>
           </div>
           <div>
-            <img src="./img/events/two.jpg" alt="picture of a bartender pouring drink"/>
+            <img src="https://s3.amazonaws.com/cornwalls/event-photos/event_2.jpg" alt="picture of event space"/>
           </div>
           <div>
-            <img src="./img/events/three.jpg" alt="picture of people talking"/>
+            <img src="https://s3.amazonaws.com/cornwalls/event-photos/event_3.jpg" alt="picture of event space"/>
           </div>
           <div>
-            <img src="./img/events/four.jpg" alt="picture of people talking"/>
+            <img src="https://s3.amazonaws.com/cornwalls/event-photos/event_4.jpg" alt="picture of event space"/>
           </div>
           <div>
-            <img src="./img/events/five.jpg" alt="picture of people talking"/>
+            <img src="https://s3.amazonaws.com/cornwalls/event-photos/event_5.jpg" alt="picture of event space"/>
           </div>
           <div>
-            <img src="./img/events/six.jpg" alt="picture of people talking"/>
+            <img src="https://s3.amazonaws.com/cornwalls/event-photos/event_6.jpg" alt="picture of event space"/>
           </div>
           <div>
-            <img src="./img/events/seven.jpg" alt="picture of people talking"/>
+            <img src="https://s3.amazonaws.com/cornwalls/event-photos/event_7.jpg" alt="picture of event space"/>
           </div>
           <div>
-            <img src="./img/events/eight.jpg" alt="picture of people talking"/>
+            <img src="https://s3.amazonaws.com/cornwalls/event-photos/event_8.jpg" alt="picture of event space"/>
           </div>
           <div>
-            <img src="./img/events/nine.jpg" alt="picture of people talking"/>
+            <img src="https://s3.amazonaws.com/cornwalls/event-photos/event_9.jpg" alt="picture of event space"/>
           </div>
         </div>
       </div>
