--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       </div>
     </div>
     <div class="yellow-border-section">
-      <div class="mission-section white-background main-section">
+      <div class="mission-section white-background main-section" id="mission">
         <div class="mission-statement">
           <p>Cornwall's is a drinking and dining establishment that is, first and foremost, a British-style pub, where people congregate to drink their pints of beer and ale, talk, play games and eat. Cornwall's caters to those who want a good meal and a good drink at regular prices. The food and drink are traditional in a good, solid way. Cornwall's was started on the premise that drinking makes you hungry and eating makes you thirsty, and both sets of circumstances, while accompanied by good conversation and a relaxed atmosphere, combine to create a resilient institution - which contributes to community life.</p>
         </div>
@@ -145,22 +145,22 @@
       <div class="hours-section white-background main-section" id="hours">
         <h3>Hours</h3>
         <div class="regular-hours-section">
-          <h4><span class="green-text">OPEN</span> today from <span class="daily-time"></span></h4>
-          <h5>Kitchen <span class="red-text">closes</span> at <span class="kitchen-daily-time"></h5>
+          <h4><span class="green-text">OPEN</span> today <span class="daily-time"></span></h4>
+          <h5>Kitchen <span class="red-text">closes</span> at <span class="kitchen-daily-time"></span></h5>
         </div>
         <div class="regular-hours-section">
-          <h4>Monday to Friday</h4>
+          <h3>Monday to Friday</h3>
           <h4><span class="green-text">Open</span> from 12PM-2AM</h4>
-          <h5>Kitchen <span class="green-text">open</span> from 12PM-3PM & 5PM-11PM</h5>
+          <h5>Kitchen is <span class="green-text">open</span> from 12PM-3PM & 5PM-11PM</h5>
         </div>
         <div class="regular-hours-section">
-          <h4>Saturday</h4>
+          <h3>Saturday</h3>
           <h4><span class="green-text">Open</span> from 4PM-2AM</h4>
-          <h5>Kitchen <span class="green-text">open</span> from 4PM-11PM</h5>
+          <h5>Kitchen is <span class="green-text">open</span> from 4PM-11PM</h5>
         </div>
         <div class="regular-hours-section">
-          <h4>Sunday</h4>
-          <h4>Only open during Red Sox home games and Fenway concerts.</h4>
+          <h3>Sunday</h3>
+          <h5>Only open during Red Sox home games and Fenway concerts.</h5>
         </div>
       </div>
       <div class="events-section white-background main-section" id="events">
