--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         <form id="contactForm" action="POST" method="send">
           <div id="contact-form-inputs">
             <div class="form-side left-side">
-              <div class="form-group">
+              <div class="form-group name-form-group">
                 <label for="contactName">Full Name<span class="red-text">*</span></label>
                 <input type="text"  name="data[Name]" id="contactName" placeholder="" required/>
                 <div class="errorMessage"></div>
@@ -244,12 +244,12 @@
               </div>
             </div>
             <div class="form-side right-side">
-              <div class="form-group">
+              <div class="form-group phone-form-group">
                 <label for="contactPhone">Phone Number<span class="red-text">*</span></label>
                 <input type="phone"  name="data[Phone]" id="contactPhone" placeholder="" required>
                 <div class="errorMessage"></div>
               </div>
-              <div class="form-group">
+              <div class="form-group email-form-group">
                 <label for="contactEmail">Email<span class="red-text">*</span></label>
                 <input type="email" name="from"  id="contactEmail" placeholder="" required>
                 <div class="errorMessage"></div>
