--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
     </div>
     <div class="footer">
       <p>&#169 Cornwall's</p>
-      <p class="footer-link">Privacy Policy</p>
-      <p class="footer-link">Terms of Service</p>
+<!--       <p class="footer-link">Privacy Policy</p>
+      <p class="footer-link">Terms of Service</p> -->
     </div>
 
 
