google maps API key

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
      // ga('create', 'UA-53778788-10', 'auto');
      // ga('send', 'pageview');
     </script>
+
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAyAFugW-zXnvjT2J5kxH5ld9Lph97wy0Y&callback=initMap" type="text/javascript"></script>
   </head>
 
   <body>
