--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
     <link rel="icon" type="image/png" href="./img/favicon/favicon-128.png" sizes="128x128" />
 
     <script>
-     // (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-     //   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-     //                          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-     // })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                              m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-     // ga('create', 'UA-53778788-10', 'auto');
-     // ga('send', 'pageview');
+     ga('create', 'UA-96577178-1', 'auto');
+     ga('send', 'pageview');
     </script>
 
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAyAFugW-zXnvjT2J5kxH5ld9Lph97wy0Y&callback=initMap" type="text/javascript"></script>
@@ -273,7 +273,7 @@
             </div>
           </div>
           <input type="hidden" name="utf8" value="✓">
-          <input type="hidden" name="to" value="ben@julycamp.com" />
+          <input type="hidden" name="to" value="manager@cornwalls.com" />
           <input type="hidden" name="noreply" value="no-reply@cornwalls.com" />
           <input type="hidden" name="company" value="Cornwall's" />
           <button type="submit" id="contact-button">Submit</button>
