--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <img src="./img/team/team.jpg" alt="Photograph of the Cornwall's team"/>
         </div>
         <div class="team-background">
-          <p>Cornwall's has always been family owned and operated. It all began with John in 1973 and then John and Pam when they were married in 1978. Now John and Pam have ben joined by their nephews JR, Billy and neice Elizabeth.</p>
+          <p>Cornwall's has always been family owned and operated. It all began with John in 1973 and then John and Pam when they were married in 1978. Now John and Pam have been joined by their nephews JR, Billy and neice Elizabeth.</p>
         </div>
       </div>
       <div class="hours-section white-background main-section" id="hours">
