updated google maps api key

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
      ga('send', 'pageview');
     </script>
 
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAyAFugW-zXnvjT2J5kxH5ld9Lph97wy0Y&callback=initMap" type="text/javascript"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCCF9Aml8wPmfPNLB7DSfaVHiS4oh9uriQ&callback=initMap" type="text/javascript"></script>
   </head>
 
   <body>
@@ -141,7 +141,7 @@
           <img src="./img/team/team.jpg" alt="Photograph of the Cornwall's team"/>
         </div>
         <div class="team-background">
-          <p>Cornwall's has always been family owned and operated. It all began with John in 1973 and then John and Pam when they were married in 1978. Now John and Pam have been joined by their nephews JR, Billy and neice Elizabeth.</p>
+          <p>Cornwall's has always been family owned and operated. It all began with John in 1973 and then John and Pam when they were married in 1978. Now John and Pam have been joined by their nephews JR, Billy and niece Elizabeth.</p>
         </div>
       </div>
       <div class="hours-section white-background main-section" id="hours">
