--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/color/jquery.color.plus-names-2.1.2.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCCF9Aml8wPmfPNLB7DSfaVHiS4oh9uriQ&callback=initMap" type="text/javascript"></script>
     <script type="text/javascript" src="./libraries/formValidation/formValidation.min.js"></script>
     <script type="text/javascript" src="./libraries/formValidation/bootstrap.min.js"></script>
     <script type="text/javascript" src="./libraries/slick/slick.min.js"></script>
