--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
           <input type="hidden" name="to" value="manager@cornwalls.com" />
           <input type="hidden" name="noreply" value="no-reply@cornwalls.com" />
           <input type="hidden" name="company" value="Cornwall's" />
-          <button type="submit" id="contact-button">Submit</button>
+          <button type="submit" id="contact-button" value="submit">Submit</button>
           <p id="confirmation" class="green-text">
             Thank you! Someone will be in touch within the next 2-3 business days.
           </p>
