--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
     <div class="landing" id="home">
       <h1>Cornwall's</h1>
       <div class="landing-content">
+        <p class="red-text">Hello Friends of Cornwalls,<br/>Our team has been working the last few days to shut down Cornwalls until further notice.  Being that we are a local family business, this unexpected situation has put us under tremendous financial stress.  We have a small but loyal team some of whom have been with us for more than fifteen years. In an effort to ensure we make it through this period of closure we're hoping our supporters will purchase a gift card to make things easier. We look forward to serving you some day soon! Please be healthy and safe!<br/>Cheers,<br/>Cornwalls team</p>
+      </div>
+      <div class="landing-content">
         <img class="landing-image" src="./img/landing/landing.jpg" alt="Landing Image of Team"/>
         <div class="landing-hours">
           <h4>is <span class="green-text">OPEN</span> today <span class="daily-time"></span></h4>
